Add locking feature

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/realglobe-Inc/sugo-endpoint-file#readme",
   "dependencies": {
     "apemanfs": "^1.0.4",
+    "apemanlock": "^1.0.2",
     "co": "^4.6.0",
     "debug": "^2.2.0"
   },
