--- a/package.json
+++ b/package.json
@@ -31,14 +31,14 @@
   "devDependencies": {
     "ape-doc": "^2.0.2",
     "ape-tmpl": "^5.0.6",
-    "apemanport": "^2.0.0",
     "apemanrequest": "^2.0.1",
-    "apemansleep": "^1.0.3",
+    "aport": "^1.0.0",
+    "asleep": "^1.0.3",
     "coz": "^6.0.3",
     "injectmock": "^2.0.0",
     "sg-server": "^1.2.3",
+    "sugo-agent-file": "^1.0.0",
     "sugos-assets": "^1.1.5",
-    "sugo-agent-file": "*",
     "sugos-ci": "^1.4.4"
   },
   "engines": {
