--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Endpoint to handle files",
   "main": "lib",
   "scripts": {
-    "prepublish": "./ci/build.js",
-    "test": "./ci/test.js"
+    "prepare": "node ./ci/build.js",
+    "test": "node ./ci/test.js"
   },
   "repository": "realglobe-Inc/sugo-endpoint-file",
   "keywords": [
@@ -17,7 +17,7 @@
     "name": "Taka Okunishi",
     "url": "http://okunishitaka.com"
   },
-  "license": "MIT",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/realglobe-Inc/sugo-endpoint-file/issues"
   },
@@ -38,14 +38,11 @@
     "injectmock": "^2.0.0",
     "sg-server": "^1.2.7",
     "sugo-agent-file": "^1.0.6",
-    "sugo-ci-endpoint": "^1.0.0",
-    "sugos-assets": "^1.1.9"
+    "sugo-ci-endpoint": "^*",
+    "sugos-assets": "*"
   },
   "engines": {
     "node": ">=6",
-    "npm": ">=3"
-  },
-  "publishConfig": {
-    "registry": "https://realglobe.artifactoryonline.com/realglobe/api/npm/npm-local"
+    "npm": ">=4"
   }
 }
